--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-preset-es2015": "^6.1.18",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.0",
+    "gulp-clean": "^0.3.1",
     "gulp-compass": "^2.1.0",
     "gulp-connect": "^2.2.0",
     "gulp-load-plugins": "^1.1.0",
